# cache-replacement-policies

./: .gitignore  CMakeLists.txt  README.md
model/: cache_model.c  cache_model.h  disk_model.c  disk_model.h
models/: disk_model.c  disk_model.h
policies/: dummy.c  dummy.h  fifo.c  fifo.h  lru.c  lru.h
tests/: tests.c
